--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
                                         <canvas class="w-[28rem] h-[28rem] absolute top-3/6 left-1/2 transform -translate-x-1/2 -translate-y-1/2 rotate-[-12deg] mt-[2.8rem]" id="canvas"></canvas>
                               </div>
                     </div>
-                    <div class="w-full h-screen sticky bg-[url('./photos/20240544.png')] bg-cover bg-center top-0 left-0">
-                              <canvas class="w-[28rem] h-[28rem] absolute top-3/6 left-1/2 transform -translate-x-1/2 -translate-y-1/2 rotate-[-12deg] mt-[2.8rem]" id="canvas"></canvas>
+                    <div class="w-full mt-[10rem] h-screen bg-[url('./photos/20240548.png')] bg-cover bg-center top-0 left-0">
                     </div>
           </div>
           <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/gsap.min.js" integrity="sha512-NcZdtrT77bJr4STcmsGAESr06BYGE8woZdSdEgqnpyqac7sugNO+Tr4bGwGF3MsnEkGKhU2KL2xh6Ec+BqsaHA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -24,6 +23,7 @@
           <script>
                     const canvas = document.querySelector("#canvas");
                     const context = canvas.getContext("2d");
+                   
                     const frames = {
                               currentIndex: 0,
                               maxIndex:360
@@ -82,7 +82,7 @@
                               scrollTrigger:{
                                         trigger:".parent",
                                         start:"top top",
-                                        scrub:1,
+                                        scrub:2,
                                         end:"bottom bottom",
 
                               }
